syntax = "proto3";

package position;

import "models/position/position_util.proto";

option java_multiple_files = true;
option java_package = "common.models.position";
option java_outer_classname = "PositionFilterProtos";

message PositionFilterProto {
  string object_class = 1;
  string version = 2;

  repeated FieldMapEntry filters = 21;
}
