syntax = "proto3";

package position;

import "models/position/position.proto";
import "requests/position/position_request.proto";

option java_multiple_files = true;
option java_package = "common.request";
option java_outer_classname = "PositionResponseProtos";

message PositionResponseProto {
  string object_class = 1;
  string version = 2;

  position.PositionRequestProto position_request = 11;

  string reporting_currency = 12;
  //TODO - Think about how to model this long term; ISO code vs. UUID vs. full security object

  repeated position.PositionProto positions = 30;
}


